--- a/fieldBy/Main/Info/Info.storyboard
+++ b/fieldBy/Main/Info/Info.storyboard
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,54 +17,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pRJ-1v-pKA">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Sor-VD-MmF">
-                                    <size key="itemSize" width="414" height="816"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="testCell" id="Ogl-oB-ZMF" customClass="testCell" customModule="fieldBy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="816"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Xzd-pf-pNv">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="816"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cFv-Xs-jjx">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="816"/>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="cFv-Xs-jjx" firstAttribute="top" secondItem="Xzd-pf-pNv" secondAttribute="top" id="4CT-h5-iNL"/>
-                                                <constraint firstItem="cFv-Xs-jjx" firstAttribute="leading" secondItem="Xzd-pf-pNv" secondAttribute="leading" id="Vy3-gz-YdM"/>
-                                                <constraint firstAttribute="bottom" secondItem="cFv-Xs-jjx" secondAttribute="bottom" id="a1g-Aa-TKZ"/>
-                                                <constraint firstAttribute="trailing" secondItem="cFv-Xs-jjx" secondAttribute="trailing" id="olb-dX-4Kp"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="414" height="816"/>
-                                        <connections>
-                                            <outlet property="imageView" destination="cFv-Xs-jjx" id="AbV-P6-C6Y"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FcQ-GC-2gu">
+                                <rect key="frame" x="174" y="162" width="67" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="click:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="hEt-yh-3Yp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="pRJ-1v-pKA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="2Ed-Ui-ywj"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pRJ-1v-pKA" secondAttribute="trailing" id="2Wy-OG-eMR"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="pRJ-1v-pKA" secondAttribute="bottom" id="3fk-0c-KHg"/>
-                            <constraint firstItem="pRJ-1v-pKA" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="bQd-y0-iqc"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="collectionView" destination="pRJ-1v-pKA" id="MRV-uT-yCP"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
