--- a/fieldBy/Auth/UserInfo/UserInfo.storyboard
+++ b/fieldBy/Auth/UserInfo/UserInfo.storyboard
@@ -518,6 +518,89 @@
             </objects>
             <point key="canvasLocation" x="928.98550724637687" y="72.991071428571431"/>
         </scene>
+        <!--Final Info View Controller-->
+        <scene sceneID="Ywo-sg-qYm">
+            <objects>
+                <viewController storyboardIdentifier="finalinfoVC" id="BqI-hi-1i4" customClass="FinalInfoViewController" customModule="fieldBy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="blN-tC-KiH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gzV-On-imS">
+                                <rect key="frame" x="10" y="38" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="4nc-ej-ArH"/>
+                                    <constraint firstAttribute="width" constant="50" id="7et-xz-Chq"/>
+                                </constraints>
+                                <color key="tintColor" name="Black"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="chevron.left" catalog="system"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="프로골퍼이신가요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWN-Ti-0Bb">
+                                <rect key="frame" x="20" y="113" width="132.5" height="22"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="18"/>
+                                <color key="textColor" name="Black"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q9D-mB-Xrl">
+                                <rect key="frame" x="0.0" y="776" width="414" height="120"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="6uK-af-h28">
+                                        <rect key="frame" x="20" y="22" width="374" height="56"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kyB-p0-JEg">
+                                                <rect key="frame" x="0.0" y="0.0" width="179.5" height="56"/>
+                                                <color key="backgroundColor" name="LightGray"/>
+                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="16"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="아니오">
+                                                    <color key="titleColor" name="Black"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9en-oU-iF4">
+                                                <rect key="frame" x="194.5" y="0.0" width="179.5" height="56"/>
+                                                <color key="backgroundColor" name="MainColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="56" id="V9c-f9-5b5"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="16"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="예">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="56" id="N2q-Fh-Jwx"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="UBG-4t-c1I"/>
+                                    <constraint firstItem="6uK-af-h28" firstAttribute="centerY" secondItem="q9D-mB-Xrl" secondAttribute="centerY" constant="-10" id="WT7-LL-Wvv"/>
+                                    <constraint firstItem="6uK-af-h28" firstAttribute="leading" secondItem="q9D-mB-Xrl" secondAttribute="leading" constant="20" id="YCq-5E-UQ1"/>
+                                    <constraint firstAttribute="trailing" secondItem="6uK-af-h28" secondAttribute="trailing" constant="20" id="haf-cD-3cu"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OZd-iL-ke8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="q9D-mB-Xrl" firstAttribute="leading" secondItem="blN-tC-KiH" secondAttribute="leading" id="BvZ-qH-6wC"/>
+                            <constraint firstItem="gzV-On-imS" firstAttribute="leading" secondItem="OZd-iL-ke8" secondAttribute="leading" constant="10" id="Cdp-wG-W8d"/>
+                            <constraint firstItem="gzV-On-imS" firstAttribute="top" secondItem="OZd-iL-ke8" secondAttribute="top" constant="-6" id="Osl-wi-8l7"/>
+                            <constraint firstItem="eWN-Ti-0Bb" firstAttribute="leading" secondItem="OZd-iL-ke8" secondAttribute="leading" constant="20" id="Qy2-X5-tqU"/>
+                            <constraint firstAttribute="trailing" secondItem="q9D-mB-Xrl" secondAttribute="trailing" id="eXr-GX-7pU"/>
+                            <constraint firstAttribute="bottom" secondItem="q9D-mB-Xrl" secondAttribute="bottom" id="uVO-Pz-Wpt"/>
+                            <constraint firstItem="eWN-Ti-0Bb" firstAttribute="top" secondItem="gzV-On-imS" secondAttribute="bottom" constant="25" id="zrw-Xj-Ve5"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3WN-aX-cw1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1738" y="73"/>
+        </scene>
     </scenes>
     <resources>
         <image name="chevron.left" catalog="system" width="96" height="128"/>
