--- a/fieldBy/Main/Campaign/Campaign.storyboard
+++ b/fieldBy/Main/Campaign/Campaign.storyboard
@@ -563,7 +563,7 @@ DM으로 문의해주세요!</string>
                                 <viewLayoutGuide key="frameLayoutGuide" id="fJp-R3-hve"/>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lhs-AO-22I">
-                                <rect key="frame" x="10" y="50" width="50" height="50"/>
+                                <rect key="frame" x="10" y="38" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Evz-LC-UA0"/>
                                     <constraint firstAttribute="width" constant="50" id="fC9-Bh-nRU"/>
@@ -629,7 +629,11 @@ DM으로 문의해주세요!</string>
                                     <constraint firstItem="V4n-gr-nHM" firstAttribute="leading" secondItem="70D-ch-4B6" secondAttribute="leading" constant="20" id="pbP-g7-IbJ"/>
                                 </constraints>
                             </view>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="hT5-3k-MqM">
+                                <rect key="frame" x="197" y="443" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="vf6-Oy-mWy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="fxd-p8-A7w" firstAttribute="leading" secondItem="47r-HL-dmv" secondAttribute="leading" id="2nM-t8-3lr"/>
@@ -639,13 +643,15 @@ DM으로 문의해주세요!</string>
                             <constraint firstAttribute="trailing" secondItem="Qnu-6i-rea" secondAttribute="trailing" id="EFb-R0-Ahr"/>
                             <constraint firstItem="0bx-xE-l0u" firstAttribute="height" secondItem="fxd-p8-A7w" secondAttribute="height" id="JtC-KJ-IhA"/>
                             <constraint firstItem="70D-ch-4B6" firstAttribute="leading" secondItem="47r-HL-dmv" secondAttribute="leading" id="No5-3r-poN"/>
-                            <constraint firstItem="lhs-AO-22I" firstAttribute="top" secondItem="47r-HL-dmv" secondAttribute="top" constant="50" id="anh-Dg-tx8"/>
+                            <constraint firstItem="lhs-AO-22I" firstAttribute="top" secondItem="47r-HL-dmv" secondAttribute="top" constant="38" id="anh-Dg-tx8"/>
+                            <constraint firstItem="hT5-3k-MqM" firstAttribute="centerY" secondItem="vf6-Oy-mWy" secondAttribute="centerY" id="bjp-lK-kSE"/>
                             <constraint firstAttribute="bottom" secondItem="Qnu-6i-rea" secondAttribute="bottom" constant="2" id="cLP-j6-1mx"/>
                             <constraint firstAttribute="bottom" secondItem="70D-ch-4B6" secondAttribute="bottom" id="d8y-eC-ETt"/>
                             <constraint firstItem="fxd-p8-A7w" firstAttribute="top" secondItem="47r-HL-dmv" secondAttribute="top" id="hk4-9S-7lj"/>
                             <constraint firstItem="lhs-AO-22I" firstAttribute="leading" secondItem="47r-HL-dmv" secondAttribute="leading" constant="10" id="iLQ-Tr-WO5"/>
                             <constraint firstAttribute="trailing" secondItem="70D-ch-4B6" secondAttribute="trailing" id="joQ-xt-s0L"/>
                             <constraint firstAttribute="bottom" secondItem="fxd-p8-A7w" secondAttribute="bottom" constant="400" id="m6A-Ai-A2N"/>
+                            <constraint firstItem="hT5-3k-MqM" firstAttribute="centerX" secondItem="vf6-Oy-mWy" secondAttribute="centerX" id="r5w-wG-a3k"/>
                             <constraint firstItem="uke-1C-b2f" firstAttribute="leading" secondItem="47r-HL-dmv" secondAttribute="leading" id="rxW-aj-dzg"/>
                             <constraint firstItem="Qnu-6i-rea" firstAttribute="leading" secondItem="47r-HL-dmv" secondAttribute="leading" id="vzM-B7-bcS"/>
                             <constraint firstItem="70D-ch-4B6" firstAttribute="top" secondItem="uke-1C-b2f" secondAttribute="bottom" constant="2" id="xbd-U5-eeZ"/>
@@ -659,6 +665,7 @@ DM으로 문의해주세요!</string>
                         <outlet property="bottomView" destination="70D-ch-4B6" id="AWw-cf-cnT"/>
                         <outlet property="brandNameLabel" destination="8G2-hf-3Oc" id="WMb-bi-IaP"/>
                         <outlet property="dateContainer" destination="CoS-e1-9N0" id="Hpg-PG-gDD"/>
+                        <outlet property="indicator" destination="hT5-3k-MqM" id="k83-Uk-pRz"/>
                         <outlet property="infoContainer" destination="dV4-29-Q8L" id="UEv-9B-Bf9"/>
                         <outlet property="isNewContainer" destination="iL2-nm-tIg" id="zC8-SP-ZPL"/>
                         <outlet property="itemDateLabel" destination="r7y-nl-nxz" id="PHf-ca-jNU"/>
@@ -674,9 +681,11 @@ DM으로 문의해주세요!</string>
                         <outlet property="timeStickyContainer" destination="MZ7-31-hCJ" id="mdp-dW-eWF"/>
                         <outlet property="titleLabel" destination="1x1-Hk-gKk" id="hvT-PZ-fXz"/>
                         <outlet property="uploadDateLabel" destination="DFT-Z6-wPx" id="rkv-kN-D5a"/>
+                        <outlet property="viewModel" destination="8p3-Oj-nss" id="seq-91-feV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LCp-V6-mDZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <customObject id="8p3-Oj-nss" customClass="DetailCampaignViewModel" customModule="fieldBy" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="-23.188405797101453" y="787.5"/>
         </scene>
